Add lighting panel and network button

--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -165,7 +165,12 @@ panel: limits
 name: {{ gettext('Network') }}
 icon: network
 panel: network
-
+#NEW#
+[menu __main config lighting]
+name: {{ gettext('Lighting') }}
+icon: lights
+panel: lighting
+#END NEW#
 [menu __main config retraction]
 name: {{ gettext('Retraction') }}
 icon: retract
