--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -184,7 +184,7 @@ panel: retraction
 enable: {{ printer.firmware_retraction }}
 
 [menu __main config system]
-name: {{ gettext('System') }}
+name: {{ gettext('Updates') }}
 icon: info
 panel: system
 
