Fixes and some updates
Fix bed_mesh locales, modify connection in AP_configuration, wifi_strength on base_panel, appropriate showing of active_heaters in temperature panel, maybe uncomplete disables/enables buttons in job_status and method for showing messages from klipper (not exceptions). Update safety_printing fields

--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -218,6 +218,11 @@ icon: heat-up
 panel: temperature
 enable: {{ (printer.temperature_devices.count > 0) or (printer.extruders.count > 0)}}
 
+[menu __print lighting]
+name: {{ gettext('Lighting') }}
+icon: lights
+panel: lighting
+
 [menu __print fan]
 name: {{ gettext('Fan') }}
 icon: fan
