--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -100,6 +100,7 @@ name: {{ gettext('Bed Mesh') }}
 icon: bed-mesh
 panel: bed_mesh
 enable: {{ 'bed_mesh' in printer.config_sections }}
+show_all: False
 
 [menu __main more zoffset]
 name: {{ gettext('Z Calibrate') }}
@@ -145,13 +146,13 @@ enable: {{ moonraker.cameras.count > 0  }}
 name: {{ gettext('Camera') }}
 icon: camera
 panel: camera
-enable: {{ printer.cameras.count > 0 }}
+enable: {{ moonraker.cameras.count > 0 }}
 
-[menu __main more led]
-name: {{ gettext('Leds') }}
-icon: light
-panel: led
-enable: {{ printer.leds.count > 0 }}
+# [menu __main more led]
+# name: {{ gettext('Leds') }}
+# icon: light
+# panel: led
+# enable: {{ printer.leds.count > 0 }}
 
 [menu __main more notifications]
 name: {{ gettext('Notifications') }}
@@ -163,11 +164,11 @@ name: {{ gettext('Notifications') }}
 icon: notifications
 panel: notifications
 
-[menu __print led]
-name: {{ gettext('Leds') }}
-icon: light
-panel: led
-enable: {{ printer.leds.count > 0 }}
+# [menu __print led]
+# name: {{ gettext('Leds') }}
+# icon: light
+# panel: led
+# enable: {{ printer.leds.count > 0 }}
 
 [menu __main more console]
 name: {{ gettext('Console') }}
@@ -203,7 +204,7 @@ confirm:
     {{ gettext('Klipper will reboot') }}
 
 [menu __main more settings]
-name: KlipperScreen
+name: {{ gettext('Settings') }}
 icon: settings
 panel: settings
 
@@ -221,7 +222,7 @@ icon: heat-up
 panel: temperature
 enable: {{ (printer.temperature_devices.count > 0) or (printer.extruders.count > 0)}}
 
-[menu __print lighting]
+[menu __main more lighting]
 name: {{ gettext('Lighting') }}
 icon: lights
 panel: lighting
@@ -285,7 +286,7 @@ panel: retraction
 enable: {{ 'firmware_retraction' in printer.config_sections }}
 
 [menu __print settings]
-name: KlipperScreen
+name: {{ gettext('Settings') }}
 icon: settings
 panel: settings
 
@@ -322,6 +323,6 @@ panel: system
 enable: {{ moonraker_connected }}
 
 [menu __splashscreen settings]
-name: KlipperScreen
+name: {{ gettext('Settings') }}
 icon: settings
 panel: settings
