--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -100,7 +100,6 @@ name: {{ gettext('Bed Mesh') }}
 icon: bed-mesh
 panel: bed_mesh
 enable: {{ 'bed_mesh' in printer.config_sections }}
-show_all: False
 
 [menu __main more zoffset]
 name: {{ gettext('Z Calibrate') }}
@@ -140,7 +139,7 @@ enable: {{ printer.output_pins.count > 0 }}
 name: {{ gettext('Power') }}
 icon: shutdown
 panel: power
-enable: {{ moonraker.cameras.count > 0  }}
+enable: {{ moonraker.power_devices.count > 0  }}
 
 [menu __main more camera]
 name: {{ gettext('Camera') }}
