--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -101,6 +101,12 @@ icon: bed-mesh
 panel: bed_mesh
 enable: {{ 'bed_mesh' in printer.config_sections }}
 
+[menu __main more magnet_probe]
+name: {{ gettext('Magnet Probe') }}
+icon: magnetOn
+panel: magnet_probe
+enable: {{ 'probe' in printer.config_sections }}
+
 [menu __main more zoffset]
 name: {{ gettext('Z Calibrate') }}
 icon: z-farther
