--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -169,6 +169,12 @@ name: {{ gettext('Notifications') }}
 icon: notifications
 panel: notifications
 
+[menu __print system]
+name: {{ gettext('System') }}
+icon: info
+panel: system
+enable: {{ moonraker_connected }}
+
 # [menu __print led]
 # name: {{ gettext('Leds') }}
 # icon: light
@@ -188,9 +194,20 @@ panel: lighting
 #END NEW#
 
 [menu __main more system]
-name: {{ gettext('Updates') }}
+name: {{ gettext('System') }}
 icon: info
 panel: system
+enable: {{ moonraker_connected }}
+
+[menu __main more updater]
+name: {{ gettext('Update') }}
+icon: refresh
+panel: updater
+
+[menu __main more services]
+name: {{ gettext('Services') }}
+icon: services
+panel: services
 
 [menu __main more input_shaper]
 name: {{ gettext('Input Shaper') }}
@@ -331,3 +348,8 @@ enable: {{ moonraker_connected }}
 name: {{ gettext('Settings') }}
 icon: settings
 panel: settings
+
+[menu __splashscreen services]
+name: {{ gettext('Services') }}
+icon: services
+panel: services
