Добавление меню обновления в основное меню при ошибках klipper/moonraker

--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -340,3 +340,8 @@ panel: settings
 name: {{ gettext('Services') }}
 icon: services
 panel: services
+
+[menu __splashscreen updater]
+name: {{ gettext('Update') }}
+icon: refresh
+panel: updater
