--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -16,6 +16,7 @@ extruder = 235
 bed = 90
 extruder = 240
 
+### MENU __MAIN START ###
 [menu __main]
 name: {{ gettext('Main Menu') }}
 
@@ -23,50 +24,6 @@ name: {{ gettext('Main Menu') }}
 name: {{ gettext('Move') }}
 icon: move
 panel: move
-
-[menu move homing homeall]
-name: {{ gettext('Home All') }}
-icon: home
-method: printer.gcode.script
-params: {"script":"G28"}
-
-[menu move homing homex]
-name: {{ gettext('Home X') }}
-icon: home-x
-method: printer.gcode.script
-params: {"script":"G28 X"}
-
-[menu move homing homey]
-name: {{ gettext('Home Y') }}
-icon: home-y
-method: printer.gcode.script
-params: {"script":"G28 Y"}
-
-[menu move homing homez]
-name: {{ gettext('Home Z') }}
-icon: home-z
-method: printer.gcode.script
-params: {"script":"G28 Z"}
-
-[menu move homing homexy]
-name: {{ gettext('Home XY') }}
-icon: home
-method: printer.gcode.script
-params: {"script":"G28 X Y"}
-
-[menu move homing quad_gantry_level]
-name: {{ gettext('Quad Gantry Level') }}
-icon: home-z
-method: printer.gcode.script
-params: {"script":"QUAD_GANTRY_LEVEL"}
-enable: {{ 'quad_gantry_level' in printer.config_sections }}
-
-[menu move homing Z-Tilt]
-name: {{ gettext('Z Tilt') }}
-icon: z-tilt
-method: printer.gcode.script
-params: {"script":"Z_TILT_ADJUST"}
-enable: {{ 'z_tilt' in printer.config_sections }}
 
 [menu __main temperature]
 name: {{ gettext('Temperature') }}
@@ -88,7 +45,9 @@ icon: settings
 name: {{ gettext('Print') }}
 icon: print
 panel: print
+### MENU __MAIN END ###
 
+### MENU __MAIN MORE START ###
 [menu __main more bedlevel]
 name: {{ gettext('Bed Level') }}
 icon: bed-level
@@ -117,44 +76,69 @@ name: {{ gettext('Limits') }}
 icon: fine-tune
 panel: limits
 
-[menu __main more input_shaper]
-name: {{ gettext('Input Shaper') }}
-icon: move
-panel: input_shaper
-enable: {{ 'input_shaper' in printer.config_sections }}
-
-[menu __main config lighting]
-name: {{ gettext('Lighting') }}
-icon: lights
-panel: lighting
-
-[menu __main more services]
-name: {{ gettext('Services') }}
-icon: services
-panel: services
-
-[menu __main more network]
-name: {{ gettext('Network') }}
-icon: network
-panel: network
-
-[menu __main more lighting]
-name: {{ gettext('Lighting') }}
-icon: lights
-panel: lighting
-
-
 [menu __main more retraction]
 name: {{ gettext('Retraction') }}
 icon: retract
 panel: retraction
 enable: {{ 'firmware_retraction' in printer.config_sections }}
 
+[menu __main more lighting]
+name: {{ gettext('Lighting') }}
+icon: lights
+panel: lighting
+
 [menu __main more fan]
 name: {{ gettext('Fan') }}
 icon: fan
 panel: fan
 enable: {{ printer.fans.count > 0 }}
+
+[menu __main more input_shaper]
+name: {{ gettext('Input Shaper') }}
+icon: move
+panel: input_shaper
+enable: {{ 'input_shaper' in printer.config_sections }}
+
+[menu __main more save]
+name: {{ gettext('Save Config') }}
+icon: unsaved_config
+method: printer.gcode.script
+params: {"script":"SAVE_CONFIG"}
+confirm:
+    {{ gettext('Save configuration?') }}
+
+    {{ gettext('Klipper will reboot') }}
+
+[menu __main more updater]
+name: {{ gettext('Update') }}
+icon: refresh
+panel: updater
+
+[menu __main more network]
+name: {{ gettext('Network') }}
+icon: network
+panel: network
+
+[menu __main more camera]
+name: {{ gettext('Camera') }}
+icon: camera
+panel: camera
+enable: {{ moonraker.cameras.count > 0 }}
+
+[menu __main more notifications]
+name: {{ gettext('Notifications') }}
+icon: notifications
+panel: notifications
+
+[menu __main more console]
+name: {{ gettext('Console') }}
+icon: console
+panel: console
+
+[menu __main more settings]
+name: {{ gettext('Settings') }}
+icon: settings
+panel: settings
 
 [menu __main more macros]
 name: {{ gettext('Macros') }}
@@ -174,67 +158,38 @@ icon: shutdown
 panel: power
 enable: {{ moonraker.power_devices.count > 0  }}
 
-[menu __main more camera]
-name: {{ gettext('Camera') }}
-icon: camera
-panel: camera
-enable: {{ moonraker.cameras.count > 0 }}
-
-[menu __main more settings]
-name: {{ gettext('Settings') }}
-icon: settings
-panel: settings
-
-[menu __main more console]
-name: {{ gettext('Console') }}
-icon: console
-panel: console
-
-[menu __main more system]
-name: {{ gettext('System') }}
-icon: info
-panel: system
-enable: {{ moonraker_connected }}
-
-[menu __main more updater]
-name: {{ gettext('Update') }}
-icon: refresh
-panel: updater
-
-[menu __main more save]
-name: {{ gettext('Save Config') }}
-icon: unsaved_config
-method: printer.gcode.script
-params: {"script":"SAVE_CONFIG"}
-confirm:
-    {{ gettext('Save configuration?') }}
-
-    {{ gettext('Klipper will reboot') }}
-
-[menu __main more notifications]
-name: {{ gettext('Notifications') }}
-icon: notifications
-panel: notifications
-
 [menu __main more spoolman]
 name: Spoolman
 icon: spoolman
 panel: spoolman
 enable: {{ moonraker.spoolman }}
 
+[menu __main more services]
+name: {{ gettext('Services') }}
+icon: services
+panel: services
+
+[menu __main more system]
+name: {{ gettext('System') }}
+icon: info
+panel: system
+enable: {{ moonraker_connected }}
+### MENU __MAIN MORE END ###
+
+### MENU __PRINT START ###
+[menu __print]
+name: {{ gettext('Print Control') }}
+
 [menu __print notifications]
 name: {{ gettext('Notifications') }}
 icon: notifications
 panel: notifications
 
-[menu __print system]
-name: {{ gettext('System') }}
-icon: info
-panel: system
-enable: {{ moonraker_connected }}
-
-[menu __print]
-name: {{ gettext('Print Control') }}
+[menu __print extrude]
+name: {{ gettext('Extrude') }}
+icon: extrude
+panel: extrude
+enable: {{ printer.extruders.count > 0 }}
 
 [menu __print temperature]
 name: {{ gettext('Temperature') }}
@@ -248,51 +203,10 @@ icon: fan
 panel: fan
 enable: {{ printer.fans.count > 0 }}
 
-[menu __print move]
-name: {{ gettext('Move') }}
-icon: move
-panel: move
-enable: {{ printer.pause_resume.is_paused }}
-
-[menu __print extrude]
-name: {{ gettext('Extrude') }}
-icon: extrude
-panel: extrude
-enable: {{ printer.extruders.count > 0 }}
-
-[menu __print power]
-name: {{ gettext('Power') }}
-icon: shutdown
-panel: power
-enable: {{ moonraker.power_devices.count > 0 }}
-
-[menu __print macros]
-name: {{ gettext('Macros') }}
-icon: custom-script
-panel: gcode_macros
-enable: {{ printer.gcode_macros.count > 0 }}
-
-
-[menu __print camera]
-name: {{ gettext('Camera') }}
-icon: camera
-panel: camera
-enable: {{ moonraker.cameras.count > 0 }}
-
-[menu __print console]
-name: {{ gettext('Console') }}
-icon: console
-panel: console
-
 [menu __print limits]
 name: {{ gettext('Limits') }}
 icon: fine-tune
 panel: limits
-
-[menu __print network]
-name: {{ gettext('Network') }}
-icon: network
-panel: network
 
 [menu __print retraction]
 name: {{ gettext('Retraction') }}
@@ -300,17 +214,58 @@ icon: retract
 panel: retraction
 enable: {{ 'firmware_retraction' in printer.config_sections }}
 
+[menu __print lighting]
+name: {{ gettext('Lighting') }}
+icon: lights
+panel: lighting
+
+[menu __print network]
+name: {{ gettext('Network') }}
+icon: network
+panel: network
+
+[menu __print camera]
+name: {{ gettext('Camera') }}
+icon: camera
+panel: camera
+enable: {{ moonraker.cameras.count > 0 }}
+
+[menu __print macros]
+name: {{ gettext('Macros') }}
+icon: custom-script
+panel: gcode_macros
+enable: {{ printer.gcode_macros.count > 0 }}
+
+[menu __print console]
+name: {{ gettext('Console') }}
+icon: console
+panel: console
+
 [menu __print settings]
 name: {{ gettext('Settings') }}
 icon: settings
 panel: settings
+
+[menu __print move]
+name: {{ gettext('Move') }}
+icon: move
+panel: move
+enable: {{ printer.pause_resume.is_paused }}
+
+[menu __print power]
+name: {{ gettext('Power') }}
+icon: shutdown
+panel: power
+enable: {{ moonraker.power_devices.count > 0 }}
 
 [menu __print spoolman]
 name: Spoolman
 icon: spoolman
 panel: spoolman
 enable: {{ moonraker.spoolman }}
+### MENU __PRINT END ###
 
+### MENU __SPLASHSCREEN START ###
 [menu __splashscreen]
 name: {{ gettext('Menu') }}
 
@@ -345,3 +300,4 @@ panel: services
 name: {{ gettext('Update') }}
 icon: refresh
 panel: updater
+### MENU __SPLASHSCREEN END ###
