--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -1,20 +1,20 @@
 [main]
 
 [preheat PLA]
-bed = 65
-extruder = 215
+bed = 80
+extruder = 220
 
 [preheat ABS]
-bed = 110
-extruder = 240
+bed = 120
+extruder = 245
 
 [preheat PETG]
-bed = 85
+bed = 80
 extruder = 235
 
-[preheat FLEX]
-bed = 90
-extruder = 240
+[preheat TPU]
+bed = 80
+extruder = 235
 
 ### MENU __MAIN START ###
 [menu __main]
@@ -174,6 +174,21 @@ name: {{ gettext('System') }}
 icon: info
 panel: system
 enable: {{ moonraker_connected }}
+
+[menu __main more send_logs]
+name: {{ gettext('Send logs') }}
+icon: logs
+panel: send_logs
+
+[menu __main more contact_qr]
+name: {{ gettext('Contact us') }}
+icon: qr_code
+panel: contact_qr
+
+[menu __main more timelapse]
+name: {{ gettext('timelapse') }}
+icon: timelapse
+panel: timelapse
 ### MENU __MAIN MORE END ###
 
 ### MENU __PRINT START ###
@@ -263,6 +278,17 @@ name: Spoolman
 icon: spoolman
 panel: spoolman
 enable: {{ moonraker.spoolman }}
+
+[menu __print system]
+name: {{ gettext('System') }}
+icon: info
+panel: system
+enable: {{ moonraker_connected }}
+
+[menu __print send_logs]
+name: {{ gettext('Send logs') }}
+icon: logs
+panel: send_logs
 ### MENU __PRINT END ###
 
 ### MENU __SPLASHSCREEN START ###
@@ -300,4 +326,9 @@ panel: services
 name: {{ gettext('Update') }}
 icon: refresh
 panel: updater
+
+[menu __splashscreen send_logs]
+name: {{ gettext('Send logs') }}
+icon: logs
+panel: send_logs
 ### MENU __SPLASHSCREEN END ###
