--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -189,6 +189,11 @@ panel: contact_qr
 name: {{ gettext('timelapse') }}
 icon: timelapse
 panel: timelapse
+
+[menu __main more terminal]
+name: {{ gettext('Terminal') }}
+icon: console
+panel: terminal
 ### MENU __MAIN MORE END ###
 
 ### MENU __PRINT START ###
@@ -289,6 +294,11 @@ enable: {{ moonraker_connected }}
 name: {{ gettext('Send logs') }}
 icon: logs
 panel: send_logs
+
+[menu __print timelapse]
+name: {{ gettext('timelapse') }}
+icon: timelapse
+panel: timelapse
 ### MENU __PRINT END ###
 
 ### MENU __SPLASHSCREEN START ###
@@ -331,4 +341,9 @@ panel: updater
 name: {{ gettext('Send logs') }}
 icon: logs
 panel: send_logs
+
+[menu __splashscreen terminal]
+name: {{ gettext('Terminal') }}
+icon: console
+panel: terminal
 ### MENU __SPLASHSCREEN END ###
