--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -60,12 +60,6 @@ icon: bed-mesh
 panel: bed_mesh
 enable: {{ 'bed_mesh' in printer.config_sections }}
 
-[menu __main more magnet_probe]
-name: {{ gettext('Magnet Probe') }}
-icon: magnetOn
-panel: magnet_probe
-enable: {{ 'probe' in printer.config_sections }}
-
 [menu __main more zoffset]
 name: {{ gettext('Z Calibrate') }}
 icon: z-farther
@@ -92,12 +86,6 @@ name: {{ gettext('Fan') }}
 icon: fan
 panel: fan
 enable: {{ printer.fans.count > 0 }}
-
-[menu __main more input_shaper]
-name: {{ gettext('Input Shaper') }}
-icon: move
-panel: input_shaper
-enable: {{ 'input_shaper' in printer.config_sections }}
 
 [menu __main more save]
 name: {{ gettext('Save Config') }}
@@ -175,26 +163,55 @@ icon: info
 panel: system
 enable: {{ moonraker_connected }}
 
-[menu __main more send_logs]
-name: {{ gettext('Send logs') }}
-icon: logs
-panel: send_logs
-
-[menu __main more contact_qr]
-name: {{ gettext('Contact us') }}
-icon: qr_code
-panel: contact_qr
-
 [menu __main more timelapse]
 name: {{ gettext('timelapse') }}
 icon: timelapse
 panel: timelapse
 
-[menu __main more terminal]
+### MENU __MAIN MORE END ###
+
+### MENU __MAIN MORE CALIBRATE START ###
+[menu __main more calibrations]
+name: {{ gettext('Calibrations and services') }}
+icon: settings
+
+[menu __main more calibrations input_shaper]
+name: {{ gettext('Input Shaper') }}
+icon: move
+panel: input_shaper
+enable: {{ 'input_shaper' in printer.config_sections }}
+
+[menu __main more calibrations pid]
+name: {{ gettext('Pid settings') }}
+icon: pid
+panel: pid
+
+[menu __main more magnet_probe]
+name: {{ gettext('Magnet Probe') }}
+icon: magnetOn
+panel: magnet_probe
+enable: {{ 'probe' in printer.config_sections }}
+
+[menu __main more calibrations diagnostic]
+name: {{ gettext('Diagnostic') }}
+icon: diagnostic
+panel: diagnostic
+
+[menu __main more calibrations send_logs]
+name: {{ gettext('Send logs') }}
+icon: logs
+panel: send_logs
+
+[menu __main more calibrations contact_qr]
+name: {{ gettext('Contact us') }}
+icon: qr_code
+panel: contact_qr
+
+[menu __main more calibrations terminal]
 name: {{ gettext('Terminal') }}
 icon: console
 panel: terminal
-### MENU __MAIN MORE END ###
+### MENU __MAIN MORE CALIBRATE END ###
 
 ### MENU __PRINT START ###
 [menu __print]
