--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -24,6 +24,7 @@ name: {{ gettext('Main Menu') }}
 name: {{ gettext('Move') }}
 icon: move
 panel: move
+style: color4
 
 [menu __main temperature]
 name: {{ gettext('Temperature') }}
@@ -45,6 +46,7 @@ icon: settings
 name: {{ gettext('Print') }}
 icon: print
 panel: print
+style: color4
 ### MENU __MAIN END ###
 
 ### MENU __MAIN MORE START ###
