--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -56,16 +56,27 @@ icon: bed-level
 panel: bed_level
 enable: {{ 'bed_screws' in printer.config_sections or 'screws_tilt_adjust' in printer.config_sections}}
 
+[menu __main more zoffset]
+name: {{ gettext('Z Calibrate') }}
+icon: z-farther
+panel: zcalibrate
+
 [menu __main more bedmesh]
 name: {{ gettext('Bed Mesh') }}
 icon: bed-mesh
 panel: bed_mesh
 enable: {{ 'bed_mesh' in printer.config_sections }}
 
-[menu __main more zoffset]
-name: {{ gettext('Z Calibrate') }}
-icon: z-farther
-panel: zcalibrate
+[menu __main more fan]
+name: {{ gettext('Fan') }}
+icon: fan
+panel: fan
+enable: {{ printer.fans.count > 0 }}
+
+[menu __main more notifications]
+name: {{ gettext('Notifications') }}
+icon: notifications
+panel: notifications
 
 [menu __main more limits]
 name: {{ gettext('Limits') }}
@@ -83,52 +94,10 @@ name: {{ gettext('Lighting') }}
 icon: lights
 panel: lighting
 
-[menu __main more fan]
-name: {{ gettext('Fan') }}
-icon: fan
-panel: fan
-enable: {{ printer.fans.count > 0 }}
-
-[menu __main more save]
-name: {{ gettext('Save Config') }}
-icon: unsaved_config
-method: printer.gcode.script
-params: {"script":"SAVE_CONFIG"}
-confirm:
-    {{ gettext('Save configuration?') }}
-
-    {{ gettext('Klipper will reboot') }}
-
-[menu __main more updater]
-name: {{ gettext('Update') }}
-icon: refresh
-panel: updater
-
-[menu __main more network]
-name: {{ gettext('Network') }}
-icon: network
-panel: network
-
-[menu __main more camera]
-name: {{ gettext('Camera') }}
-icon: camera
-panel: camera
-enable: {{ moonraker.cameras.count > 0 }}
-
-[menu __main more notifications]
-name: {{ gettext('Notifications') }}
-icon: notifications
-panel: notifications
-
 [menu __main more console]
 name: {{ gettext('Console') }}
 icon: console
 panel: console
-
-[menu __main more settings]
-name: {{ gettext('Settings') }}
-icon: settings
-panel: settings
 
 [menu __main more macros]
 name: {{ gettext('Macros') }}
@@ -136,28 +105,15 @@ icon: custom-script
 panel: gcode_macros
 enable: {{ printer.gcode_macros.count > 0 }}
 
-[menu __main more pins]
-name: {{ gettext('Pins') }}
-icon: hashtag
-panel: pins
-enable: {{ printer.output_pins.count > 0 }}
+[menu __main more timelapse]
+name: {{ gettext('timelapse') }}
+icon: timelapse
+panel: timelapse
 
-[menu __main more power]
-name: {{ gettext('Power') }}
-icon: shutdown
-panel: power
-enable: {{ moonraker.power_devices.count > 0  }}
-
-[menu __main more spoolman]
-name: Spoolman
-icon: spoolman
-panel: spoolman
-enable: {{ moonraker.spoolman }}
-
-[menu __main more services]
-name: {{ gettext('Services') }}
-icon: services
-panel: services
+[menu __main more network]
+name: {{ gettext('Network') }}
+icon: network
+panel: network
 
 [menu __main more system]
 name: {{ gettext('System') }}
@@ -165,17 +121,66 @@ icon: info
 panel: system
 enable: {{ moonraker_connected }}
 
-[menu __main more timelapse]
-name: {{ gettext('timelapse') }}
-icon: timelapse
-panel: timelapse
+[menu __main more services]
+name: {{ gettext('Services') }}
+icon: services
+panel: services
+
+[menu __main more calibrations]
+name: {{ gettext('Calibrations and services') }}
+icon: calibration_and_services
+
+[menu __main more settings]
+name: {{ gettext('Settings') }}
+icon: settings
+panel: settings
+
+# [menu __main more save]
+# name: {{ gettext('Save Config') }}
+# icon: unsaved_config
+# method: printer.gcode.script
+# params: {"script":"SAVE_CONFIG"}
+# confirm:
+#     {{ gettext('Save configuration?') }}
+
+#     {{ gettext('Klipper will reboot') }}
+
+# [menu __main more camera]
+# name: {{ gettext('Camera') }}
+# icon: camera
+# panel: camera
+# enable: {{ moonraker.cameras.count > 0 }}
+
+# [menu __main more pins]
+# name: {{ gettext('Pins') }}
+# icon: hashtag
+# panel: pins
+# enable: {{ printer.output_pins.count > 0 }}
+
+# [menu __main more power]
+# name: {{ gettext('Power') }}
+# icon: shutdown
+# panel: power
+# enable: {{ moonraker.power_devices.count > 0  }}
+
+# [menu __main more spoolman]
+# name: Spoolman
+# icon: spoolman
+# panel: spoolman
+# enable: {{ moonraker.spoolman }}
 
 ### MENU __MAIN MORE END ###
 
 ### MENU __MAIN MORE CALIBRATE START ###
-[menu __main more calibrations]
-name: {{ gettext('Calibrations and services') }}
-icon: settings
+[menu __main more calibrations save_zoffset]
+name: {{ gettext('Save offset endstop') }}
+icon: unsaved_config
+method: printer.gcode.script
+params: {"script":"Z_OFFSET_APPLY_ENDSTOP"}
+confirm:
+    {{ gettext('Save z-offset?') }}
+    {{ gettext('Z-axis will be homed automatically') }}
+sensitive: {{ has_homing_origin }}
 
 [menu __main more calibrations input_shaper]
 name: {{ gettext('Input Shaper') }}
@@ -188,16 +193,32 @@ name: {{ gettext('Pid settings') }}
 icon: pid
 panel: pid
 
-[menu __main more magnet_probe]
+[menu __main more calibrations magnet_probe]
 name: {{ gettext('Magnet Probe') }}
 icon: magnetOn
 panel: magnet_probe
 enable: {{ 'probe' in printer.config_sections }}
 
+[menu __main more calibrations camera]
+name: {{ gettext('Camera') }}
+icon: camera
+panel: camera
+enable: {{ moonraker.cameras.count > 0 }}
+
+[menu __main more calibrations terminal]
+name: {{ gettext('Terminal') }}
+icon: console
+panel: terminal
+
 [menu __main more calibrations diagnostic]
 name: {{ gettext('Diagnostic') }}
 icon: diagnostic
 panel: diagnostic
+
+[menu __main more calibrations updater]
+name: {{ gettext('Update') }}
+icon: refresh
+panel: updater
 
 [menu __main more calibrations send_logs]
 name: {{ gettext('Send logs') }}
@@ -208,21 +229,21 @@ panel: send_logs
 name: {{ gettext('Contact us') }}
 icon: qr_code
 panel: contact_qr
-
-[menu __main more calibrations terminal]
-name: {{ gettext('Terminal') }}
-icon: console
-panel: terminal
 ### MENU __MAIN MORE CALIBRATE END ###
 
 ### MENU __PRINT START ###
 [menu __print]
 name: {{ gettext('Print Control') }}
 
-[menu __print notifications]
-name: {{ gettext('Notifications') }}
-icon: notifications
-panel: notifications
+[menu __print save_zoffset]
+name: {{ gettext('Save offset endstop') }}
+icon: unsaved_config
+method: printer.gcode.script
+params: {"script":"Z_OFFSET_APPLY_ENDSTOP"}
+confirm:
+    {{ gettext('Save z-offset?') }}
+    {{ gettext('Z-axis will be homed automatically') }}
+sensitive: {{ has_homing_origin }}
 
 [menu __print extrude]
 name: {{ gettext('Extrude') }}
@@ -242,6 +263,11 @@ icon: fan
 panel: fan
 enable: {{ printer.fans.count > 0 }}
 
+[menu __print notifications]
+name: {{ gettext('Notifications') }}
+icon: notifications
+panel: notifications
+
 [menu __print limits]
 name: {{ gettext('Limits') }}
 icon: fine-tune
@@ -258,16 +284,10 @@ name: {{ gettext('Lighting') }}
 icon: lights
 panel: lighting
 
-[menu __print network]
-name: {{ gettext('Network') }}
-icon: network
-panel: network
-
-[menu __print camera]
-name: {{ gettext('Camera') }}
-icon: camera
-panel: camera
-enable: {{ moonraker.cameras.count > 0 }}
+[menu __print console]
+name: {{ gettext('Console') }}
+icon: console
+panel: console
 
 [menu __print macros]
 name: {{ gettext('Macros') }}
@@ -275,33 +295,15 @@ icon: custom-script
 panel: gcode_macros
 enable: {{ printer.gcode_macros.count > 0 }}
 
-[menu __print console]
-name: {{ gettext('Console') }}
-icon: console
-panel: console
+[menu __print timelapse]
+name: {{ gettext('timelapse') }}
+icon: timelapse
+panel: timelapse
 
-[menu __print settings]
-name: {{ gettext('Settings') }}
-icon: settings
-panel: settings
-
-[menu __print move]
-name: {{ gettext('Move') }}
-icon: move
-panel: move
-enable: {{ printer.pause_resume.is_paused }}
-
-[menu __print power]
-name: {{ gettext('Power') }}
-icon: shutdown
-panel: power
-enable: {{ moonraker.power_devices.count > 0 }}
-
-[menu __print spoolman]
-name: Spoolman
-icon: spoolman
-panel: spoolman
-enable: {{ moonraker.spoolman }}
+[menu __print network]
+name: {{ gettext('Network') }}
+icon: network
+panel: network
 
 [menu __print system]
 name: {{ gettext('System') }}
@@ -314,10 +316,34 @@ name: {{ gettext('Send logs') }}
 icon: logs
 panel: send_logs
 
-[menu __print timelapse]
-name: {{ gettext('timelapse') }}
-icon: timelapse
-panel: timelapse
+[menu __print camera]
+name: {{ gettext('Camera') }}
+icon: camera
+panel: camera
+enable: {{ moonraker.cameras.count > 0 }}
+
+[menu __print settings]
+name: {{ gettext('Settings') }}
+icon: settings
+panel: settings
+
+# [menu __print move]
+# name: {{ gettext('Move') }}
+# icon: move
+# panel: move
+# enable: {{ printer.pause_resume.is_paused }}
+
+# [menu __print power]
+# name: {{ gettext('Power') }}
+# icon: shutdown
+# panel: power
+# enable: {{ moonraker.power_devices.count > 0 }}
+
+# [menu __print spoolman]
+# name: Spoolman
+# icon: spoolman
+# panel: spoolman
+# enable: {{ moonraker.spoolman }}
 ### MENU __PRINT END ###
 
 ### MENU __SPLASHSCREEN START ###
