--- a/ks_includes/defaults.conf
+++ b/ks_includes/defaults.conf
@@ -229,6 +229,11 @@ panel: send_logs
 name: {{ gettext('Contact us') }}
 icon: qr_code
 panel: contact_qr
+
+[menu __main more calibrations force_move]
+name: {{ gettext('Force move') }}
+icon: force_move
+panel: force_move
 ### MENU __MAIN MORE CALIBRATE END ###
 
 ### MENU __PRINT START ###
