--- a/scripts/KlipperScreen.service
+++ b/scripts/KlipperScreen.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=KlipperScreen
-StartLimitIntervalSec=0
+StartLimitBurst=5
+StartLimitIntervalSec=30
 # Make sure we are started after logins are permitted. If Plymouth is
 # used, we want to start when it is on its way out.
 After=systemd-user-sessions.service plymouth-quit-wait.service
@@ -12,7 +13,7 @@ After=dbus.socket systemd-logind.service
 
 [Service]
 Type=simple
-Restart=always
+Restart=on-failure
 RestartSec=2
 User=KS_USER
 SupplementaryGroups=klipperscreen
